fix scrollbar issue

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,7 +5,7 @@
 }
 
 .sidePanel {
-  width: 15%;
+  width: 10%;
   min-width: 10rem;
   border-right: 1px solid black;
   .title {
